# fun

./: .gitignore  Cargo.toml  flake.nix  package-lock.json  package.json
src/: keycodes.rs  lib.rs  main.rs
src/train/: dataset.rs
tests/: test_input_handling.rs
